# mkwo-records-bot

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
src/: discord.rs  lib.rs  main.rs  ocr.rs
src/discord/: handler.rs  mod.rs  util.rs  validation.rs
src/discord/commands/: mod.rs  ocr.rs  play.rs
src/discord/interactions/: mod.rs
src/discord/interactions/autocompletes/: track.rs
src/discord/interactions/commands/: mod.rs  play.rs  refresh.rs  update_time.rs
src/discord/interactions/components/record/: change_driver.rs  mod.rs  select_driver.rs
src/discord/interactions/messages/: image.rs  validation.rs
src/discord/templates/: record.rs
src/ocr/: mod.rs  ocr.rs  prompt.txt
src/sheets/: errors.rs  gsheet.rs  mod.rs  players.rs  records.rs  tracks.rs  utils.rs
src/sheets/players/: mod.rs  player.rs
src/sheets/records/: mod.rs  record.rs
src/sheets/tracks/: mod.rs  track.rs
