[package]
name = "mkwo-records-bot"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
chrono-tz = "0.10.3"
dotenv = "0.15.0"
google-sheets4 = "6.0.0"
regex = "1.11.1"
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
