[package]
name = "mkwo-records-bot"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
dotenv = "0.15.0"
google-sheets4 = "6.0.0"
infer = "0.19.0"
mime = "0.3.17"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
thiserror = "2.0.16"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }